[package]
name = "gRPC"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Removed the empty [dev-dependencies] section
